@@ -89,6 +89,17 @@
             <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
         </File>
 
+        <RollingFile name="rrrc_ids" append="true" fileName="logs/rrrc_ids.log" filePattern="logs/rrrc_ids.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
+        <File name="rrrc_ids_summary" append="false" fileName="logs/rrrc_ids_summary.log">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] %m%n"/>
+            <ThresholdFilter level="INFO" onMatch="ACCEPT" onMismatch="DENY"/>
+        </File>
+
         <RollingFile name="deleted_aliases" append="true" fileName="logs/deleted_aliases.log" filePattern="logs/deleted_aliases.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
             <Policies>
@@ -152,6 +163,11 @@
         <Logger name="orphan_terms" level="debug" additivity="false">
             <AppenderRef ref="orphan_terms"/>
             <AppenderRef ref="orphan_terms_summary"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="rrrc_ids" level="debug" additivity="false">
+            <AppenderRef ref="rrrc_ids"/>
+            <AppenderRef ref="rrrc_ids_summary"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
